[package]
name = "finstack-statements"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
finstack-core = { path = "../core" }
finstack-cashflows = { path = "../cashflows" }
finstack-valuations = { path = "../valuations" }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
nom = "8.0"
tracing = { version = "0.1", default-features = false }
time = { workspace = true }
rust_decimal = { workspace = true }
strsim = "0.11.1"

# rayon has no working thread pool on single-threaded wasm32; parallel
# code paths are cfg-gated to native targets, so the dependency is too.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.11"

[dev-dependencies]
time = { workspace = true, features = ["macros"] }
criterion = { workspace = true }
proptest = "1.11.0"
finstack-test-utils = { path = "../test-utils" }

[[bench]]
name = "statements_operations"
harness = false

[[bench]]
name = "statements_scale"
harness = false
