[package]
name = "finstack-valuations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
finstack-core = { path = "../core" }
finstack-cashflows = { path = "../cashflows" }
finstack-margin = { path = "../margin" }
finstack-monte-carlo = { path = "../monte_carlo", default-features = false, features = ["parallel"] }
finstack-valuations-macros = { path = "macros" }
indexmap = { workspace = true, features = ["serde"] }
smallvec = { version = "1.15", default-features = false, features = ["serde"] }
rayon = { version = "1.11", optional = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
time = { workspace = true }
rust_decimal = { workspace = true }
schemars = { workspace = true }
jsonschema = { version = "0.28", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
thiserror = { workspace = true }
num-complex = "0.4"
strum = { workspace = true, features = ["derive"] }
ts-rs = { version = "12", optional = true, features = ["serde-compat", "no-serde-warnings"] }

[dev-dependencies]
time = { workspace = true, features = ["macros"] }
proptest = "1.9"
criterion = { workspace = true }
rust_decimal_macros = { workspace = true }
finstack-statements = { path = "../statements" }
finstack-statements-analytics = { path = "../statements-analytics" }



[features]
default = ["parallel"]
parallel = ["dep:rayon"]
mc = ["finstack-monte-carlo/mc", "finstack-margin/mc"]
slow = []  # Enable slow-running tests (200k+ MC paths, jump-diffusion, etc.)
ts_export = ["dep:ts-rs"]
test-utils = []  # Opt-in for external test suites and benchmarks

[[bench]]
name = "bond_pricing"
harness = false

[[bench]]
name = "swap_pricing"
harness = false

[[bench]]
name = "option_pricing"
harness = false

[[bench]]
name = "cds_pricing"
harness = false

[[bench]]
name = "cashflow_generation"
harness = false

[[bench]]
name = "cds_option_pricing"
harness = false

[[bench]]
name = "cds_tranche_pricing"
harness = false

[[bench]]
name = "swaption_pricing"
harness = false

[[bench]]
name = "cds_index_pricing"
harness = false

[[bench]]
name = "structured_credit_pricing"
harness = false

[[bench]]
name = "convertible_pricing"
harness = false

[[bench]]
name = "calibration"
harness = false

[[bench]]
name = "mc_pricing"
harness = false
required-features = ["mc"]

[[bench]]
name = "fi_misc_pricing"
harness = false

[[bench]]
name = "mc_exotics_pricing"
harness = false
required-features = ["mc"]

[[bench]]
name = "bucketed_risk"
harness = false

[[bench]]
name = "structured_credit_pool"
harness = false

[[bench]]
name = "df_bootstrap"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "fwd_curve"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "sabr_slice"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "bond_future_bench"
harness = false

[[bench]]
name = "metrics"
harness = false

[[bench]]
name = "equity_pricing"
harness = false

[[bench]]
name = "fx_dates"
harness = false

[[bench]]
name = "inflation_pricing"
harness = false

[[bench]]
name = "attribution"
harness = false

[[bench]]
name = "attribution_scale"
harness = false

[[bench]]
name = "linear_rates"
harness = false

[[bench]]
name = "fx_pricing"
harness = false

[[bench]]
name = "commodity_pricing"
harness = false

[[bin]]
name = "gen_schemas"
path = "src/bin/gen_schemas.rs"
