[package]
name = "finstack-statements-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.finstack-statements]
path = ".."

[[bin]]
name = "parse_formula"
path = "fuzz_targets/parse_formula.rs"
test = false
doc = false

[[bin]]
name = "deserialize_model"
path = "fuzz_targets/deserialize_model.rs"
test = false
doc = false

[profile.release]
debug = 1

